--- a/Website/index.html
+++ b/Website/index.html
@@ -39,7 +39,7 @@
                 <div class="col-12">
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
-                        <a href="#" class="logo">Anything</a>
+                        <a href="#" class="logo">ANYTHING</a>
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
@@ -48,7 +48,7 @@
                             <li class="scroll-to-section"><a href="#services">Services</a></li>
                             <li class="scroll-to-section"><a href="#frequently-question">Frequently Questions</a></li>
                             <li class="submenu">
-                                <a href="javascript:;">Drop Down</a>
+                                <a href="javascript:;">DROP DOWN</a>
                                 <ul>
                                     <li><a href="">About Us</a></li>
                                     <li><a href="">Features</a></li>
@@ -78,7 +78,7 @@
             <div class="container">
                 <div class="row">
                     <div class="left-text col-lg-6 col-md-6 col-sm-12 col-xs-12" data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
-                        <h1>Achievments <strong>of YOURS</strong></h1>
+                        <h1>Achievments <strong>of yours/strong></h1>
                         <p>"All our dreams can come true, if we have the courage to pursue them."   -Walt Disney</p>
                         <a href="#about" class="main-button-slider">Find Out More</a>
                     </div>
@@ -172,7 +172,7 @@
                         <div class="icon">
                             <i><img src="assets/images/service-icon-01.png" alt=""></i>
                         </div>
-                        <h5 class="service-title">First Box Service</h5>
+                        <h5 class="service-title">1st Box Service</h5>
                         <p>Aenean vulputate massa sed neque consectetur, ac fringilla quam aliquet. Sed a enim nec eros tempor cursus at id libero.</p>
                         <a href="#" class="main-button">Read More</a>
                     </div>
@@ -180,7 +180,7 @@
                         <div class="icon">
                             <i><img src="assets/images/service-icon-02.png" alt=""></i>
                         </div>
-                        <h5 class="service-title">Second Box Title</h5>
+                        <h5 class="service-title">2nd Box Title</h5>
                         <p>Pellentesque vitae urna ut nisi viverra tristique quis at dolor. In non sodales dolor, id egestas quam. Aliquam erat volutpat. </p>
                         <a href="#" class="main-button">Discover More</a>
                     </div>
@@ -188,7 +188,7 @@
                         <div class="icon">
                             <i><img src="assets/images/service-icon-03.png" alt=""></i>
                         </div>
-                        <h5 class="service-title">Third Title Box</h5>
+                        <h5 class="service-title">3rd Title Box</h5>
                         <p>Quisque finibus libero augue, in ultrices quam dictum id. Aliquam quis tellus sit amet urna tincidunt bibendum.</p>
                         <a href="#" class="main-button">More Detail</a>
                     </div>
@@ -196,7 +196,7 @@
                         <div class="icon">
                             <i><img src="assets/images/service-icon-02.png" alt=""></i>
                         </div>
-                        <h5 class="service-title">Fourth Service Box</h5>
+                        <h5 class="service-title">4th Service Box</h5>
                         <p>Fusce sollicitudin feugiat risus, tempus faucibus arcu blandit nec. Duis auctor dolor eu scelerisque vestibulum.</p>
                         <a href="#" class="main-button">Read More</a>
                     </div>
@@ -204,7 +204,7 @@
                         <div class="icon">
                             <i><img src="assets/images/service-icon-01.png" alt=""></i>
                         </div>
-                        <h5 class="service-title">Fifth Service Title</h5>
+                        <h5 class="service-title">5th Service Title</h5>
                         <p>Curabitur aliquam eget tellus id porta. Proin justo sapien, posuere suscipit tortor in, fermentum mattis elit.</p>
                         <a href="#" class="main-button">Discover</a>
                     </div>
@@ -212,7 +212,7 @@
                         <div class="icon">
                             <i><img src="assets/images/service-icon-03.png" alt=""></i>
                         </div>
-                        <h5 class="service-title">Sixth Box Title</h5>
+                        <h5 class="service-title">6th Box Title</h5>
                         <p>Ut nibh velit, aliquam vitae pellentesque nec, convallis vitae lacus. Aliquam porttitor urna ut pellentesque.</p>
                         <a href="#" class="main-button">Detail</a>
                     </div>
@@ -220,7 +220,7 @@
                         <div class="icon">
                             <i><img src="assets/images/service-icon-01.png" alt=""></i>
                         </div>
-                        <h5 class="service-title">Seventh Title Box</h5>
+                        <h5 class="service-title">7th Title Box</h5>
                         <p>Sed a consequat velit. Morbi lectus sapien, vestibulum et sapien sit amet, ultrices malesuada odio. Donec non quam.</p>
                         <a href="#" class="main-button">Read More</a>
                     </div>
